<resources>
    <string name="app_name">Be Zika Free</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="symptoms_title">What are the symptoms of Zika?</string>
    <string name="symptoms_text">The Zika virus commonly causes a mild flu-like illness that might include fever, headache, joint and or muscle pain, conjunctivitis (“pink eye”) and sometimes a body rash.\n\n
        Most people infected with Zika virus won’t have symptoms. For this reason, many people might not realize they have been infected. It is estimated that only one out of five infected people will have symptoms. The most common symptoms of Zika are fever, rash, joint pain, or conjunctivitis (red eyes). Other common symptoms include muscle pain and headache.\n\n
        The illness is usually mild. Symptoms begin 3 to 7 days after being infected and can last for several days to a week. People usually don’t get sick enough to go to the hospital, and they very rarely die of Zika.\n\n
        Zika virus usually remains in the blood of an infected person for about a week but it can be found longer in some people. Once a person has been infected, he or she is likely to be protected from future infections.\n\n
        See your doctor or other healthcare provider if you are pregnant and develop a fever, rash, joint pain, or red eyes within 2 weeks after traveling to a place where Zika has been reported. Be sure to tell your doctor or other healthcare provider where you traveled.</string>
    <string name="overview_title">What is Zika?</string>
    <string name="overview_text">The Zika virus is a mosquito-borne illness, meaning people can get the virus by being bitten by an infected mosquito. Zika virus is related to dengue, yellow fever and West Nile Virus. It was first identified in 1947. In 2013 there were outbreaks of illness from Zika virus in several Pacific islands. More recently, the virus has been reported in many Central and South American countries. Beginning in late 2015, cases of Zika virus have been reported in some U.S. states. These are people who were infected while traveling to these countries.</string>
    <string name="transmission_mosquito_title">Through Mosquito Bites</string>
    <string name="effects_risks_title">Background Risks</string>
    <string name="effects_risks_text">In every pregnancy a woman starts out with a 3-5% chance of having a baby with a birth defect. This is called her background risk. This sheet talks about whether exposure to the Zika virus may increase the risk for birth defects over that background risk. This information should not take the place of medical care and advice from your health care provider.</string>
    <string name="effects_breastfeeding_title">Breastfeeding with Zika</string>
    <string name="effects_breastfeeding_text">The Brazilian Ministry of Health and the CDC state that with our current understanding, breastfeeding should not be interrupted. At this time there is no information on possible effects to the baby in a breastfeeding mother who has the Zika virus. Be sure to talk to your health care provider about all your choices for breastfeeding.</string>
    <string name="effects_pregnancy_title">Can Zika Virus Affect my Pregnancy?</string>
    <string name="effects_pregnancy_text">In April 2016, the CDC announced that there is now enough evidence to conclude that Zika virus infection during pregnancy is a cause of microcephaly (small head and brain) and other severe fetal brain defects. Other abnormalities are also associated with Zika virus infection during pregnancy. Mothers of these babies described rash and flu-like illnesses during their pregnancies and some have tested positive for the Zika virus. Research is continuing to determine the risk of adverse pregnancy outcomes in babies whose mothers had the Zika virus in pregnancy.\n\n
        Pregnant women can be infected with Zika virus in any trimester (4,7,8). The incidence of Zika virus infection in pregnant women is not currently known, and data on pregnant women infected with Zika virus are limited. No evidence exists to suggest that pregnant women are more susceptible to Zika virus infection or experience more severe disease during pregnancy.\n\n
        Maternal-fetal transmission of Zika virus has been documented throughout pregnancy (4,7,8). Although Zika virus RNA has been detected in the pathologic specimens of fetal losses (4), it is not known if Zika virus caused the fetal losses. Zika virus infections have been confirmed in infants with microcephaly (4), and in the current outbreak in Brazil, a marked increase in the number of infants born with microcephaly has been reported (9). However, it is not known how many of the microcephaly cases are associated with Zika virus infection. Studies are under way to investigate the association of Zika virus infection and microcephaly, including the role of other contributory factors (e.g., prior or concurrent infection with other organisms, nutrition, and environment). The full spectrum of outcomes that might be associated with Zika virus infections during pregnancy is unknown and requires further investigation.</string>
    <string name="effects_pregnancy2_title">Before I got pregnant I was in a country with active Zika. What if I had Zika then, even without symptoms? Is there a chance of a problem for the baby?</string>
    <string name="effects_pregnancy2_text">Zika virus usually remains in the blood of an infected person for a few days to a week. The virus will not cause infection in a baby that is conceived after the virus is cleared from the mother’s blood. If you conceived very shortly before or after returning from an area with active Zika, you should speak to your health care provider, regardless of symptoms. There is currently no evidence that Zika virus infection increases the chance of birth defects in future pregnancies. Again, the chance of a problem for the baby when the mother has Zika infection in her pregnancy is not well understood.</string>
    <string name="effects_microcephaly_title">Facts about Microcephaly</string>
    <string name="effects_microcephaly_text">Microcephaly is a birth defect where a baby’s head is smaller than expected when compared to babies of the same sex and age. Babies with microcephaly often have smaller brains that might not have developed properly.\n\n
        Microcephaly is a condition where a baby’s head is much smaller than expected. During pregnancy, a baby’s head grows because the baby’s brain grows. Microcephaly can occur because a baby’s brain has not developed properly during pregnancy or has stopped growing after birth, which results in a smaller head size. Microcephaly can be an isolated condition, meaning that it can occur with no other major birth defects, or it can occur in combination with other major birth defects.\n\n
        Severe microcephaly is a more serious, extreme form of this condition where a baby’s head is much smaller than expected. Severe microcephaly can result because a baby’s brain has not developed properly during pregnancy, or the brain started to develop correctly and then was damaged at some point during pregnancy.\n\n
        Babies with microcephaly can have a range of other problems, depending on how severe their microcephaly is. Microcephaly has been linked with the following problems:\n\n
        \t\t• Seizures \n
        \t\t• Developmental delay, such as problems with speech or other developmental milestones (like sitting, standing, and walking)\n
        \t\t• Intellectual disability (decreased ability to learn and function in daily life)\n
        \t\t• Problems with movement and balance\n
        \t\t• Feeding problems, such as difficulty swallowing\n
        \t\t• Hearing loss\n
        \t\t• Vision problems\n\n
        These problems can range from mild to severe and are often lifelong. Because the baby’s brain is small and underdeveloped, babies with severe microcephaly can have more of these problems, or have more difficulty with them, than babies with milder microcephaly. Severe microcephaly also can be life-threatening. Because it is difficult to predict at birth what problems a baby will have from microcephaly, babies with microcephaly often need close follow-up through regular check-ups with a healthcare provider to monitor their growth and development.</string>
    <string name="prevention_title">Prevention</string>
    <string name="prevention_text">Prevention is the best approach for protection. That includes using an EPA approved insect repellent, wearing protective clothing (such as long sleeves and long pants and/or clothing treated with permethrin), and removing standing water where mosquitoes live and breed. When possible, air-conditioning or screens should be used to keep mosquitoes out of the home. More information is available on The Centers for Disease Control and Prevention (CDC) webpage Zika Virus Prevention. MotherToBaby fact sheets are available for the insect repellent DEET and information about the insecticide permethrin is included on our Pesticides and Pregnancy fact sheet.</string>
    <string name="prevention_preventBites_title">Steps to Prevent Zika - Prevent Bites</string>
    <string name="prevention_preventBites_text">When in areas with Zika and other diseases spread by mosquitoes, take the following steps:\n\n
        \t\t • Wear long-sleeved shirts and long pants.\n
        \t\t • Stay in places with air conditioning and window and door screens to keep mosquitoes outside.\n
        \t\t • Take steps to control mosquitoes inside and outside your home.\n
        \t\t • Sleep under a mosquito bed net if you are overseas or outside and are not able to protect yourself from mosquito bites.\n
        \t\t • Use Environmental Protection Agency (EPA)-registered insect repellents with one of the following active ingredients: DEET, picaridin, IR3535, oil of lemon eucalyptus, or para-menthane-diol. Choosing an EPA-registered repellent ensures the EPA has evaluated the product for effectiveness. When used as directed, EPA-registered insect repellents are proven safe and effective, even for pregnant and breast-feeding women.\n
        \t\t •Treat clothing and gear with permethrin or purchase permethrin-treated items.\n\n
        Even if they do not feel sick, travelers returning to the United States from an area with Zika should take steps to prevent mosquito bites for 3 weeks so they do not spread Zika to mosquitoes that could spread the virus to other people.</string>
    <string name="treatment_tests_title">Tests</string>
    <string name="treatment_tests_text">Doctors can order the $500 test through Quest, which says it can get results three to five days after it arrives.\n\n
        Uninsured patient price of $120 for patients who lack health insurance and whose providers have verified their patient is eligible.\n\n
        At this time, the CDC and some state and territorial health departments are the only laboratories able to detect a current infection. Private laboratories are working on offering the test in the near future. Available tests for detecting past infection may not be able to rule out infection with a virus similar to Zika. Guidelines for testing pregnant women can be found through state health departments.</string>
    <string name="treatment_testBabies_title">Tests for babies</string>
    <string name="treatment_testBabies_text">If a pregnant woman has laboratory evidence of Zika virus, the baby’s development can be followed closely with ultrasounds for the rest of the pregnancy. Referral to a maternal-fetal medicine or infectious disease specialist with expertise in pregnancy management is recommended.</string>
</resources>