<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/standard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            app:cardCornerRadius="2dp"
            android:padding="@dimen/standard"
            android:layout_marginTop="@dimen/margin_top"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/standard">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:textAllCaps="true"
                    android:textSize="30sp"
                    android:text="@string/treatment_tests_title"
                    android:layout_marginBottom="@dimen/standard"
                    android:layout_marginTop="@dimen/margin_top"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/treatment_tests_text" />

            </LinearLayout>
        </android.support.v7.widget.CardView>





        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            app:cardCornerRadius="2dp"
            android:padding="@dimen/standard"
            android:layout_marginTop="@dimen/margin_top"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/standard">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:textAllCaps="true"
                    android:textSize="30sp"
                    android:text="@string/treatment_testBabies_title"
                    android:layout_marginBottom="@dimen/standard"
                    android:layout_marginTop="@dimen/margin_top"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/treatment_testBabies_text"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>



    </LinearLayout>
</ScrollView>